    - Make the NodeFamilies config option work. (Reported by
      lodger -- it has never actually worked, even though we added it
      in Oct 2004.)
    - When choosing an entry guard for our circuit, avoid using guards
      that are in the same family as the chosen exit -- not just guards
      that are exactly the chosen exit. (Reported by lodger.)

  o Minor bugfixes (controller):
    - Make 'getinfo fingerprint' return a 551 error if we're not a
      server, so we match what the control spec claims we do. Reported
      by daejees.
    - Fix a typo in an error message when extendcircuit fails that
      caused us to not follow the \r\n-based delimiter protocol. Reported
      by daejees.
    - Actually set the purpose correctly for descriptors inserted with
      purpose=controller.

  o Code simplifications and refactoring:
    - Stop passing around circuit_t and crypt_path_t pointers that are
      implicit in other procedure arguments.
    - Drop the old code to choke directory connections when the corresponding
      OR connections got full: thanks to the cell queue feature, OR conns
      don't get full any more.
    - Make dns_resolve() handle attaching connections to circuits
      properly, so the caller doesn't have to.
    - Rename wants_to_read and wants_to_write to read/write_blocked_on_bw.


Changes in version 0.1.2.13 - 2007-04-24
  o Minor fixes:
    - Fix a memory leak when we ask for "all" networkstatuses and we
      get one we don't recognize.
    - Add more asserts to hunt down bug 417.
    - Disable kqueue on OS X 10.3 and earlier, to fix bug 371.


Changes in version 0.1.2.12-rc - 2007-03-16
  o Major bugfixes:
    - Fix an infinite loop introduced in 0.1.2.7-alpha when we serve
      directory information requested inside Tor connections (i.e. via
      begin_dir cells). It only triggered when the same connection was
      serving other data at the same time. Reported by seeess.

  o Minor bugfixes: